[gd_scene load_steps=3 format=3 uid="uid://dphapx43pip0p"]

[ext_resource type="Script" path="res://Scripts/System/Inventory/InventorySlot.gd" id="1_qkys0"]
[ext_resource type="Texture2D" uid="uid://cwf66uvm02o3y" path="res://icon.svg" id="2_vd4xh"]

[node name="InventorySlot" type="PanelContainer"]
self_modulate = Color(0.490196, 0.294118, 0.14902, 1)
custom_minimum_size = Vector2(50, 50)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_qkys0")

[node name="Icon" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("2_vd4xh")
expand_mode = 1

[node name="QuantityPanel" type="Panel" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="QuantityText" type="Label" parent="QuantityPanel"]
layout_mode = 1
anchors_preset = -1
offset_left = -28.0
offset_top = -26.0
grow_horizontal = 2
grow_vertical = 2
text = "999"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
